[package]
name = "lightning-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lightning-model = { path = "../lightning-model", default-features = false }
glutin = "0.32.*"
glutin-winit = "0.5.*"
raw-window-handle = "0.6.*"
egui = "0.31.*"
egui_glow = { version = "0.31.*", features = ["winit", "clipboard"] }
egui_extras = "0.31.*"
glow = "0.16.*"
dirs = "4.*"
serde = "1.0.*"
serde_json = "1.0.*"
rustc-hash = "2.0.*"
lazy_static = "1.5.*"
glam = "0.27.*"
image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
quadtree-f32 = "0.4.*"
strum = "0.26.*"
thousands = "0.2.*"

[features]
default = ["import"]
import = ["lightning-model/import"]
