[package]
name = "lightning-app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
lightning-model = { path = "../lightning-model", default-features = false }
glutin = "0.32.*"
glutin-winit = "0.5.*"
raw-window-handle = "0.6.*"
egui = "0.33.*"
egui_glow = { version = "0.33.*", features = ["winit", "clipboard"] }
egui_extras = "0.33.*"
egui_flex = "0.5.*"
glow = "0.16.*"
dirs = "4.*"
serde = "1.0.*"
serde_json = "1.0.*"
rustc-hash = "2.0.*"
lazy_static = "1.5.*"
glam = "0.30.*"
image = { version = "0.25.*", default-features = false, features = ["jpeg", "png", "webp"] }
quadtree-f32 = "0.4.*"
strum = "0.26.*"
thousands = "0.2.*"
enumflags2 = "0.7.*"
imbl = { version = "7.0.*", features = ["serde"] }
archery = "1.2.*"
rayon = "1.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.*", features = ["Win32_Graphics_Dwm"] }

[features]
default = ["import"]
import = ["lightning-model/import"]

[lints]
workspace = true
