[package]
name = "lightning-data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lightning-model = { path = "../lightning-model", default-features = false }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_with = { version = "3.11.*", features = ["json"] }
rustc-hash = "2.0.*"
byteorder = "1.5.0"
regex = "1.11.*"
argh = "0.1.12"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
lazy_static = "1.5.*"
dds-rs = "0.7.0"
