[package]
name = "lightning-model"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
rustc-hash = "1.1"
bincode = "1.3"
pathfinding = "4.9"

[dev-dependencies]
bencher = "0.1"

[features]
default = ["import"]
import = ["reqwest"]

[[bench]]
name = "calc"
harness = false
