[package]
name = "lightning-model"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_with = { version = "3.18.*", features = ["json"] }
regex = { version = "1.12.*", default-features = false, features = ["std", "perf"] }
lazy_static = "1.5.*"
reqwest = { version = "0.12.*", features = ["blocking", "json"], optional = true }
rustc-hash = "2.0.*"
bincode = "1.3.*"
pathfinding = "4.14.*"
rust_decimal = "1.36.*"
strum = "0.26.*"
strum_macros = "0.26.*"
enumflags2 = "0.7.*"

[dev-dependencies]
bencher = "0.1"

[features]
default = ["import"]
import = ["reqwest"]

[[bench]]
name = "calc"
harness = false

[lints]
workspace = true
